# personal-review-tool

./: .base_env  .gitignore  .pre-commit-config.yaml  .prettierrc  Dockerfile  Dockerfile.node  Dockerfile.python  Pipfile  action.yml  docker-compose.yml  manage.py  package.json  pyproject.toml  pyproject.toml.sample  sample_respone.js  tsconfig.json
.circleci/: config.yml
ci/: build.py  create_task_def.py  deploy.py
nginx/: nginx.conf
public/: index.html
pyvideon/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
pyvideon/.circleci/: config.yml
pyvideon/example/: admin.py  models.py  schema.py
pyvideon/example/migrations/: 0001_initial.py
pyvideon/previews/: apps.py  schema.py
src/: App.test.tsx  Routes.tsx  config.ts
src/apis/: previewVideo.ts
src/clients/: graphql.ts  hotspring.ts
src/components/Core/IconButton/: index.tsx
src/components/Core/Link/: index.tsx
src/components/Home/: index.tsx
src/components/PreviewVideo/: index.tsx
src/components/PreviewVideo/Header/: index.tsx
src/components/PreviewVideo/Header/Options/: index.tsx
src/components/PreviewVideo/Header/PreviewSwitcher/: index.tsx
src/components/PreviewVideo/Sidabar/: index.tsx
src/components/PreviewVideo/Sidabar/Comments/: index.tsx
src/components/PreviewVideo/Sidabar/ExtendedPreviewSwitcher/: index.tsx
src/components/PreviewVideo/Sidabar/VersionSelector/: index.tsx
src/components/PreviewVideo/VideoPlayer/: index.tsx
src/gql-queries/: CreateFeedbackNoteMutation.ts  shot-versions.ts
src/models/: PreviewVideo.ts
src/store/preview-video/: videoList.ts
(+4 files in other folders)
