[tool.poetry]
name = "pyvideon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.15"
graphene-django = "^2.15.0"
requests = "^2.28.1"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 89

[tool.pylint]
disable = ["E1101", "C0115", "C0116", "E0213"]

